# pyvariant

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  _generate.py  profile.out  pyproject.toml  setup.cfg  setup.py  temp.txt  temp2.txt
.github/workflows/: python-package.yml
_dev/: download_annotations.py  sort_func_by_name.py
ensembl_map/: __init__.py  best_transcripts.py  biomart.py  cache.py  cli.py  config.py  constants.py  contig_names.py  convert.py  core.py  data_type.py  ensembl.py  ensembl_cache.py  ensembl_release.py  exceptions.py  features.py  files.py  gene_names.py  gtf.py  ids.py  main.py  map.py  mapper.py  normalize.py  sequence.py  sequences.py  symbol.py  tables.py  transcript.py  transcript_names.py  util.py  utils.py
ensembl_map/data/: biomart_query.xml  empty.fa.fai
ensembl_map/data_cache/: biomart.py  data_cache.py
pyvariant/: __init__.py  cli.py  constants.py  core.py  ensembl_cache.py  ensembl_release.py  files.py  parser.py  positions.py  regex.py  sequence.py  utils.py  variants.py
pyvariant/data/: empty.fa
tests/: README.md  __init__.py  conftest.py  constants.py  make_cache.py  test_best_transcripts.py  test_cache.py  test_contig_names.py  test_core.py  test_core_map.py  test_core_position.py  test_data_cache.py  test_ensembl.py  test_ensembl_cache.py  test_ensembl_download.py  test_ensembl_release.py  test_exceptions.py  test_features.py  test_files.py  test_gene_names.py  test_ids.py  test_init.py  test_main.py  test_map.py  test_mapper.py  test_normalize.py  test_parser.py  test_sequence.py  test_sequences.py  test_symbol.py  test_transcript.py  test_transcript_names.py  test_util.py  test_utils.py  test_variants.py  tests_dataframe.py
tests/core/: test_cdna_deletion.py  test_cdna_delins.py  test_cdna_duplication.py  test_cdna_fusion.py  test_cdna_to_cdna.py  test_cdna_to_dna.py  test_cdna_to_exon.py  test_cdna_to_protein.py  test_cdna_to_rna.py  test_core.py  test_dna_deletion.py  test_dna_delins.py  test_dna_duplication.py  test_dna_fusion.py  test_dna_substitution.py  test_dna_to_cdna.py  test_dna_to_dna.py  test_dna_to_exon.py  test_dna_to_protein.py  test_dna_to_rna.py  test_exon_fusion.py  test_exon_to_cdna.py  (+25 more)
variant_map/: cli.py  constants.py  core.py  ensembl_cache.py  ensembl_release.py  files.py  parser.py  positions.py  regex.py  sequence.py  tables.py  types.py  utils.py
(+154 files in other folders)
