[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 100
skip_magic_trailing_comma = true

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov variant_map --cov-report term --cov-report xml:coverage.xml"
