[metadata]
name = pyvariant
version = 2.3.0
description = Map biological sequence variants (mutations) to their equivalent chromosome, cDNA, gene, exon, protein, and RNA positions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattdoug604/pyvariant.git
author = Matthew Douglas
author_email = mattdoug604@gmail.com
maintainer = Matthew Douglas
maintainer_email = mattdoug604@gmail.com
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = True
install_requires =
    appdirs
    # BioPython<1.80 is only needed until this pyfaidx commit is released: https://github.com/mdshw5/pyfaidx/commit/f4958d128fde26ebf6294b52f940b78ce57cc63a
    BioPython>=1.73,<1.80
    gtfparse<=2.0.1
    # 'packaging' is an unlisted dependency of 'pyfaidx' as of v0.7.2.1 
    packaging
    pandas
    polars<0.17.0
    pyarrow
    pyfaidx

[options.package_data]
pyvariant = data/*
* = README.md

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-mock
    twine
    wheel

[options.entry_points]
console_scripts =
    pyvariant = pyvariant.cli:main

[flake8]
ignore =
    E203
    E501
    W503
per-file-ignores =
    pyvariant/__init__.py:F401
